Closed Bug 1814889 Opened 2 years ago Closed 2 years ago

[win] Opening a New Private window will no longer display a private browsing icon on the taskbar

Categories

(Firefox :: Installer, defect)

Firefox 111
Desktop
Windows
defect

Tracking

()

VERIFIED FIXED
111 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox109 --- unaffected
firefox110 --- unaffected
firefox111 --- verified

People

(Reporter: atrif, Assigned: spohl)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached image pbm.gif

Found in

  • 111.0a1 (20230203091639)

Affected versions

  • 111.0a1 (20230203091639)

Tested platforms

  • Affected platforms: Windows 11x64, Windows 10x64
  • Unaffected platforms: macOS, Ubuntu

Steps to reproduce

  1. Open Firefox and open a New private window.
  2. Observe the taskbar.

Expected result

  • The newly opened private window appears on the taskbar.

Actual result

  • The newly opened private window is not displayed on the taskbar.

Regression range

Additional notes

  • Attached a screen recording.
Assignee: nobody → spohl.mozilla.bugs
Status: NEW → ASSIGNED
Regressed by: 639707
Pushed by spohl@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d1e590622e31 Ensure that opening private windows continues to display a private browsing icon on the Windows taskbar. r=bhearsum,mstange
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch

Verified fixed with Firefox 111.0a1 (20230206092409) on Windows 10x64 and Windows 11x64. The private browsing icon is correctly displayed on the Windows taskbar when a private browsing window is opened.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: