Bug 1814889: Ensure that opening private windows continues to display a private browsing icon on the Windows taskbar. r=bhearsum,mstange

Differential Revision: https://phabricator.services.mozilla.com/D168821